# DSPyDemos

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: model_type.md
src/demos/: readme.md
src/demos/ai_agent/: agent.py  dummy_data.py  tools.py
src/demos/ai_app/: audio.py  classify_events.py  custom_dspy_module.py  entity_extraction.py  history.py  image_generate.py  local_rag.py  pot_demos.py  rag_agent.py  rag_agent1.py  readme.md  simple_chat.py
src/demos/ai_app/flight_agent/: agent.py  dummy_data.py  tools.py
src/demos/history/: few_shot.py  history.py
src/demos/llm/: ollama.py  ollama_llm.py
src/demos/opti_app/: FT_agents.py  advanced_tooluse.py  classify_ft.py  math_reasoning.py  readme.md
src/demos/real_world/: code_generator.py  extract_emails.py  finance.py  llm_txt.py  memory_agent.py  readme.md  text_ai_game.py
src/demos/reflective_opti/: ai_control_classify.py  info_extract.py  math.py  privacy_delegate.py  readme.md
src/demos/rl_opti/: mult_module.py  mult_search.py  readme.md
src/demos/tools_dev_deploy/: dspy_async.py  dspy_cache.py  dspy_debug.py  dspy_stream.py  manage_data.py  my_custom_module.py  output_use.py  readme.md
src/demos/tools_dev_deploy/deploy/: fastapi_dspy.py  main.py
src/demos/tools_dev_deploy/mcp_use/: agent.py  mcp_client.py  mcp_server.py
src/sdk/llm/ollama/: ollama.py  ollama_litellm.py
src/tests/llm/: ollama_llm.py
src/utils/: github_download.py  github_mirror_download.py  huggingface_down.py  smart_download.py
