[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "DSPyDemos"
version = "0.1.0"
description = "DSPy learn demos"
readme="README.md"

dependencies = [
    "datasets>=4.5.0",
    "dspy>=3.0.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
]

#[project.scripts]


#[project.gui-scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "demos*",
    "sdk*",
    "sdk*/*"
]

#[tool.setuptools.package-data]
#"cmdbox_commands.task_manager" = ["*.j2"]

